[BEAM-898] Display TIFF and GeoTIFF tags in metadata
git-svn-id: https://www.brockmann-consult.de/svn/os/beam-4.x/trunk@3718 d90d2d48-2b33-0410-a973-e72f85796a02